# octet

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
api/: octet.hpp
app/: main.cpp
app/cli/: commands.cpp  commands.hpp  main.cpp
app/cli/interactive/: commands.cpp  commands.hpp
app/cli/server/: connection.cpp  connection.hpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
app/server/: config.json  go.mod  go.sum  protocol.hpp
app/server/cmd/octet-server/: main.go
app/server/docs/: docs.go  swagger.json  swagger.yaml
app/server/internal/api/: handler.go  middleware.go  router.go
app/server/internal/config/: config.go
app/server/internal/protocol/: protocol.go
app/server/internal/service/: client.go  process.go
cmake/: octet-config.cmake.in  octet-uninstall.cmake.in  octetConfig.cmake.in
docker/: Dockerfile  config.json  docker-compose.yaml  entrypoint.sh
docs/: future_updates.md  octet.md
include/: logger.hpp
include/storage/: journal_manager.hpp  storage_manager.hpp  uuid_generator.hpp
include/utils/: compiler.hpp  file_lock_guard.hpp  file_utils.hpp  lock_guard.hpp  logger.hpp
src/: logger.cpp
src/storage/: journal_manager.cpp  storage_manager.cpp  uuid_generator.cpp
src/utils/: file_lock_guard.cpp  file_utils.cpp  lock_guard.cpp  logger.cpp
tests/: CMakeLists.txt  test_file_lock_guard.cpp  test_file_utils.cpp  test_journal_manager.cpp  test_storage_manager.cpp  test_uuid_generator.cpp  testing_utils.cpp  testing_utils.hpp
